# pactflow-agent-skills

./: .gitignore  LICENSE  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: sync-dsl.yml
docs/ai-tools/: kiro-power.md  pactflow-skill.md  smartbear-mcp.md
plugins/drift/.claude-plugin/: plugin.json
plugins/drift/skills/: drift  drift-testing
plugins/openapi-parser/.claude-plugin/: plugin.json
plugins/openapi-parser/skills/: openapi-parser
plugins/swagger-contract-testing/: .mcp.json
plugins/swagger-contract-testing/.claude-plugin/: plugin.json
plugins/swagger-contract-testing/agents/: bdct-tester.md  pact-generator.md  pact-implementor.md  pact-maintainer.md  pact-reviewer.md
plugins/swagger-contract-testing/hooks/: check-pact-config.sh  deployment-reminder.sh  hooks.json
powers/swagger-contract-testing/: POWER.md  mcp.json
powers/swagger-contract-testing/steering/: bdct.md  verify-and-deploy.md  write-tests.md
scripts/generate/: _common.py  dsl_dotnet.py  dsl_go.py  dsl_js.py  dsl_jvm.py  dsl_php.py  dsl_python.py  dsl_swift.py  pyproject.toml
skills/: drift-testing  openapi-parser  pactflow
skills/drift/: SKILL.md
skills/drift-testing/: SKILL.md
skills/drift-testing/references/: auth.md  mock-server.md  pactflow-and-cicd.md
skills/drift/references/: auth.md  cli-reference.md  lua-api.md  mock-server.md  pactflow-and-cicd.md  test-cases.md
skills/drift/scripts/: check_coverage.py  extract_endpoints.py  run_loop.ps1  run_loop.sh  start_mock.ps1
skills/openapi-parser/: SKILL.md
(+10 files in other folders)
